2008-11-30  Antti Koivisto  <antti@apple.com>

        Reviewed by Mark Rowe.
        
        Try to return free pages in the current thread cache too.

        * wtf/FastMalloc.cpp:
        (WTF::TCMallocStats::releaseFastMallocFreeMemory):

2008-12-01  David Levin  <levin@chromium.org>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=22567
        Make HashTable work as expected with respect to threads. Specifically, it has class-level
        thread safety and constant methods work on constant objects without synchronization.
        
        No observable change in behavior, so no test. This only affects debug builds.

        * wtf/HashTable.cpp:
        (WTF::hashTableStatsMutex):
        (WTF::HashTableStats::~HashTableStats):
        (WTF::HashTableStats::recordCollisionAtCount):
        Guarded variable access with a mutex.

        * wtf/HashTable.h:
        (WTF::::lookup):
        (WTF::::lookupForWriting):
        (WTF::::fullLookupForWriting):
        (WTF::::add):
        (WTF::::reinsert):
        (WTF::::remove):
        (WTF::::rehash):
        Changed increments of static variables to use atomicIncrement.

        (WTF::::invalidateIterators):
        (WTF::addIterator):
        (WTF::removeIterator):
        Guarded mutable access with a mutex.

2008-11-29  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Camron Zwarich.

        Enable WREC on PLATFORM(X86_64).  This change predominantly requires changes to the
        WREC::Generator::generateEnter method to support the x86-64 ABI, and addition of
        support for a limited number of quadword operations in the X86Assembler.

        This patch will cause the JS heap to be allocated with RWX permissions on 64-bit Mac
        platforms.  This is a regression with respect to previous 64-bit behaviour, but is no
        more permissive than on 32-bit builds.  This issue should be addressed at some point.